--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -180,7 +180,7 @@
         "CREATED_SUCCESS": "Created project successfully.",
         "DELETED_SUCCESS": "Deleted projects successfully.",
         "TOGGLED_SUCCESS": "Toggled project successfully.",
-        "FAILED_TO_DELETE_PROJECT": "Project contains repositories or replication rules cannot be deleted.",
+        "FAILED_TO_DELETE_PROJECT": "Project contains repositories or replication rules or helm-charts cannot be deleted.",
         "INLINE_HELP_PUBLIC": "When a project is set to public, anyone has read permission to the repositories under this project, and the user does not need to run \"docker login\" before pulling images under this project.",
         "OF": "of"
     },
