--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -69,7 +69,7 @@
         "RULE_USER_EXISTING": "Name is already in use.",
         "EMPTY": "Name is required",
         "NONEMPTY": "Can't be empty",
-        "REPO_TOOLTIP": "Users can not do any operations to the images in this mode."
+        "REPO_TOOLTIP": "Users can not do any operations to the images in this mode.",
     },
     "PLACEHOLDER": {
         "CURRENT_PWD": "Enter current password",
@@ -855,6 +855,11 @@
         "MSG_SUCCESS": "Garbage Collection Successful",
         "MSG_SCHEDULE_SET": "Garbage Collection schedule has been set",
         "MSG_SCHEDULE_RESET": "Garbage Collection schedule has been reset"
+    },
+    "RETAG": {
+        "MSG_SUCCESS": "Retag successfully",
+        "TIP_REPO": "A repository name is broken up into path components. A component of a repository name must be at least one lowercase, alpha-numeric characters, optionally separated by periods, dashes or underscores. More strictly, it must match the regular expression [a-z0-9]+(?:[._-][a-z0-9]+)*.If a repository name has two or more path components, they must be separated by a forward slash ('/').The total length of a repository name, including slashes, must be less the 256 characters.",
+        "TIP_TAG": "A tag is a label applied to a Docker image in a repository. Tags are how various images in a repository are distinguished from each other.It need to match Regex: (`[\\w][\\w.-]{0,127}`)"
     }
 
 }
