Update i18n files of project_detail
Add `helmchart` item in `project_detail` entry

Signed-off-by: Qian Deng <dengq@vmware.com>

--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -177,7 +177,8 @@
         "LOGS": "Logs",
         "LABELS": "Labels",
         "PROJECTS": "Projets",
-        "CONFIG": "Configuration"
+        "CONFIG": "Configuration",
+        "HELMCHART": "Helm Charts"
     },
     "PROJECT_CONFIG": {
         "REGISTRY": "Dépôt du Projet",
