--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -191,7 +191,8 @@
         "LOGS": "Logs",
         "LABELS": "Labels",
         "PROJECTS": "Proyectos",
-        "CONFIG": "Configuración"
+        "CONFIG": "Configuración",
+        "HELMCHART": "Helm Charts"
     },
     "PROJECT_CONFIG": {
         "REGISTRY": "Registro de proyectos",
