Include os version in image tag detail page
Signed-off-by: He Weiwei <hweiwei@vmware.com>
Signed-off-by: Wenkai Yin <yinw@vmware.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -753,6 +753,7 @@
         "DOCKER_VERSION": "Docker Version",
         "ARCHITECTURE": "Architecture",
         "OS": "OS",
+        "OS_VERSION": "OS Version",
         "HAVE": "have",
         "HAS": "has",
         "SCAN_COMPLETION_TIME": "Scan Completed",
