--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -455,6 +455,7 @@
         "DOCKER_VERSION": "Versão do Docker",
         "ARCHITECTURE": "Arquitetura",
         "OS": "SO",
+        "OS_VERSION": "Versão do SO",
         "SHOW_DETAILS": "Exibir detalhes",
         "REPOSITORIES": "Repositórios",
         "OF": "de",
