Include os version in image tag detail page
Signed-off-by: He Weiwei <hweiwei@vmware.com>

--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -454,6 +454,7 @@
         "DOCKER_VERSION": "Versão do Docker",
         "ARCHITECTURE": "Arquitetura",
         "OS": "SO",
+        "OS_VERSION": "Versão do SO",
         "SHOW_DETAILS": "Exibir detalhes",
         "REPOSITORIES": "Repositórios",
         "OF": "de",
