Include os version in image tag detail page
Signed-off-by: He Weiwei <hweiwei@vmware.com>

--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -715,6 +715,7 @@
         "DOCKER_VERSION": "Version de Docker",
         "ARCHITECTURE": "Architecture",
         "OS": "OS",
+        "OS_VERSION": "Version de OS",
         "HAVE": "have",
         "HAS": "has",
         "SCAN_COMPLETION_TIME": "Analyse Terminée",
