Modify the location to open the Developer Center
Signed-off-by: FangyuanCheng <fangyuanc@vmware.com>
Signed-off-by: Wenkai Yin <yinw@vmware.com>

--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -122,10 +122,10 @@
             "REGISTRY": "Registries",
             "GROUP": "Groups",
             "REPLICATION": "Replicacións",
-            "CONFIG": "Configuración",
-            "DEVCENTER": "Developer Center"
+            "CONFIG": "Configuración"
         },
-        "LOGS": "Logs"
+        "LOGS": "Logs",
+        "API_EXPLORER": "API EXPLORER"
     },
     "USER": {
         "ADD_ACTION": "New User",
