add harbor swagger title for api explorer
Signed-off-by: Meina Zhou <meinaz@vmware.com>
Signed-off-by: Wenkai Yin <yinw@vmware.com>

--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -4,7 +4,8 @@
         "HARBOR": "Harbor",
         "VIC": "Contenedores Integrados vSphere",
         "MGMT": "Administración",
-        "REG": "Registro"
+        "REG": "Registro",
+        "HARBOR_SWAGGER": "Harbor Swagger"
     },
     "SIGN_IN": {
         "REMEMBER": "Recordarme",
