--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -654,6 +654,14 @@
             "GROUP_SCOPE": "Escopo de grupo LDAP",
             "GROUP_SCOPE_INFO": "O escopo que deve ser utilizado na busca por grupos, utiliza Subtree por padrão."
         },
+        "OIDC": {
+            "PROVIDER_URL": "OIDC Provider URL",
+            "PROVIDER_URL_INFO": "The URL to your OIDC Provider. Other OIDC endpoints will be discovered using this base URL.",
+            "CLIENT_ID": "OIDC Client ID",
+            "CLIENT_ID_INFO": "The OAuth client ID for Harbor",
+            "CLIENT_SECRET": "OIDC Client Secret",
+            "CLIENT_SECRET_INFO": "The OAuth client secret for Harbor"
+        },
         "UAA": {
             "ENDPOINT": "Endpoint UAA",
             "CLIENT_ID": "ID de cliente UAA",
