--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -660,6 +660,14 @@
             "GROUP_SCOPE": "LDAP组搜索范围",
             "GROUP_SCOPE_INFO": "搜索范围"
         },
+        "OIDC": {
+            "PROVIDER_URL": "OIDC Provider URL",
+            "PROVIDER_URL_INFO": "The URL to your OIDC Provider. Other OIDC endpoints will be discovered using this base URL.",
+            "CLIENT_ID": "OIDC Client ID",
+            "CLIENT_ID_INFO": "The OAuth client ID for Harbor",
+            "CLIENT_SECRET": "OIDC Client Secret",
+            "CLIENT_SECRET_INFO": "The OAuth client secret for Harbor"
+        },
         "UAA": {
             "ENDPOINT": "UAA Endpoint",
             "CLIENT_ID": "UAA Client ID",
