--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -456,22 +456,25 @@
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "New Endpoint",
+        "PROVIDER": "Provider",
         "ENDPOINT": "Endpoint",
-        "NAME": "Endpoint Name",
+        "NAME": "Name",
         "NAME_IS_REQUIRED": "Endpoint name is required.",
         "URL": "Endpoint URL",
         "URL_IS_REQUIRED": "Endpoint URL is required.",
-        "USERNAME": "Username",
-        "PASSWORD": "Password",
+        "AUTHENTICATION":"Authentication",
+        "ACCESS_ID": "Access ID",
+        "ACCESS_SECRET": "Access Secret",
+        "STATUS": "Status",
         "TEST_CONNECTION": "Test Connection",
         "TITLE_EDIT": "Edit Endpoint",
-        "TITLE_ADD": "Create Endpoint",
+        "TITLE_ADD": "New Registry Endpoint",
         "EDIT": "Edit",
         "DELETE": "Delete",
         "TESTING_CONNECTION": "Testing Connection...",
         "TEST_CONNECTION_SUCCESS": "Connection tested successfully.",
         "TEST_CONNECTION_FAILURE": "Failed to ping endpoint.",
-        "CONFLICT_NAME": "Endpoint name or URL already exists.",
+        "CONFLICT_NAME": "Endpoint name already exists.",
         "INVALID_NAME": "Invalid endpoint name.",
         "FAILED_TO_GET_TARGET": "Failed to get endpoint.",
         "CREATION_TIME": "Creation Time",
