--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -457,22 +457,25 @@
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "Nuevo Endpoint",
+        "PROVIDER": "Provider",
         "ENDPOINT": "Endpoint",
-        "NAME": "Nombre del Endpoint",
+        "NAME": "Nombre",
         "NAME_IS_REQUIRED": "El nombre del endpoint es obligatorio.",
         "URL": "URL del Endpoint",
         "URL_IS_REQUIRED": "La URL del endpoint es obligatoria.",
-        "USERNAME": "Nombre de usuario",
-        "PASSWORD": "Contraseña",
+        "AUTHENTICATION":"Autenticación",
+        "ACCESS_ID": "ID de acceso",
+        "ACCESS_SECRET": "Secreto de acceso",
+        "STATUS": "Estado",
         "TEST_CONNECTION": "Comprobar conexión",
         "TITLE_EDIT": "Editar Endpoint",
-        "TITLE_ADD": "Crear Endpoint",
+        "TITLE_ADD": "Nuevo punto final de registro",
         "EDIT": "Editar",
         "DELETE": "Eliminar",
         "TESTING_CONNECTION": "Comprobar conexión...",
         "TEST_CONNECTION_SUCCESS": "Conexión comprobada satisfactoriamente.",
         "TEST_CONNECTION_FAILURE": "Fallo al comprobar el endpoint.",
-        "CONFLICT_NAME": "El nombre del endpoint ya existe.",
+        "CONFLICT_NAME": "El nombre ya existe.",
         "INVALID_NAME": "El nombre del endpoint no es válido.",
         "FAILED_TO_GET_TARGET": "Fallo al obtener el endpoint.",
         "CREATION_TIME": "Fecha de creación",
