--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -438,21 +438,24 @@
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "Nouveau Point Final",
+        "PROVIDER": "Provider",
         "ENDPOINT": "Point Final",
-        "NAME": "Nom du Point Final",
+        "NAME": "Alors",
         "NAME_IS_REQUIRED": "Le nom du Point final est obligatoire.",
         "URL": "URL du Point Final",
         "URL_IS_REQUIRED": "L'URL du Point Final est obligatoire.",
-        "USERNAME": "Nom d'utilisateur",
-        "PASSWORD": "Mot de Passe",
+        "AUTHENTICATION":"Authentification",
+        "ACCESS_ID": "ID d'accès",
+        "ACCESS_SECRET": "Secret d'accès",
+        "STATUS": "Statut",
         "TEST_CONNECTION": "Test de Connexion",
         "TITLE_EDIT": "Editer le Point Final",
-        "TITLE_ADD": "Créer le Point Final",
+        "TITLE_ADD": "Nouveau point de terminaison de registre",
         "DELETE": "Supprimer le Point Final",
         "TESTING_CONNECTION": "En train de tester la Connexion...",
         "TEST_CONNECTION_SUCCESS": "Connexion testée avec succès.",
         "TEST_CONNECTION_FAILURE": "Echec du ping du Point Final.",
-        "CONFLICT_NAME": "Le nom ou l'URL du point final existe déjà.",
+        "CONFLICT_NAME": "Le nom du noeud final existe déjà.",
         "INVALID_NAME": "Nom du point final invalide.",
         "FAILED_TO_GET_TARGET": "Echec de l'obtention du point final.",
         "CREATION_TIME": "Temps de Création",
