--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -457,13 +457,16 @@
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "新建目标",
+        "PROVIDER": "提供者",
         "ENDPOINT": "目标",
         "NAME": "目标名",
         "NAME_IS_REQUIRED": "目标名为必填项。",
         "URL": "目标URL",
         "URL_IS_REQUIRED": "目标URL为必填项。",
-        "USERNAME": "用户名",
-        "PASSWORD": "密码",
+        "AUTHENTICATION":"认证",
+        "ACCESS_ID": "访问ID",
+        "ACCESS_SECRET": "访问密码",
+        "STATUS": "状态",
         "TEST_CONNECTION": "测试连接",
         "TITLE_EDIT": "编辑目标",
         "TITLE_ADD": "新建目标",
@@ -472,7 +475,7 @@
         "TESTING_CONNECTION": "正在测试连接...",
         "TEST_CONNECTION_SUCCESS": "测试连接成功。",
         "TEST_CONNECTION_FAILURE": "测试连接失败。",
-        "CONFLICT_NAME": "目标名或目标URL已存在。",
+        "CONFLICT_NAME": "目标名已存在。",
         "INVALID_NAME": "无效的目标名称。",
         "FAILED_TO_GET_TARGET": "获取目标失败。",
         "CREATION_TIME": "创建时间",
