--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -65,6 +65,7 @@
         "ITEM_REQUIRED": "此项为必填项。",
         "NUMBER_REQUIRED": "此项为必填项且为数字。",
         "PORT_REQUIRED": "此项为必填项且为合法端口号。",
+        "CRON_REQUIRED": "此项为必填项且为cron格式。",        
         "EMAIL_EXISTING": "邮件地址已经存在。",
         "USER_EXISTING": "用户名已经存在。",
         "RULE_USER_EXISTING": "名称已经存在。",
@@ -641,7 +642,10 @@
             "SCANNING_POLICY": "基于不同需求设置镜像扫描策略。‘无’：不设置任何策略；‘每日定时’：每天在设置的时间定时执行扫描。",
             "VERIFY_CERT": "检查来自LDAP服务端的证书",
             "READONLY_TOOLTIP": "选中，表示正在维护状态，不可删除仓库及标签,也不可以推送镜像。",
-            "REPO_TOOLTIP": "用户在此模式下无法对图像执行任何操作。"
+            "REPO_TOOLTIP": "用户在此模式下无法对图像执行任何操作。",
+            "HOURLY_CRON":"每小时运行一次",
+            "WEEKLY_CRON":"每周一次，周六/周日午夜之间开始",
+            "DAILY_CRON":"每天午夜运行一次"
         },
         "LDAP": {
             "URL": "LDAP URL",
